# NexusAgent

./: .env.example  .gitignore  .graphify_chunks.json  .graphify_read_report.py  .impeccable.md  AGENTS.md  CHANGELOG.md  COMPETITIVE_LANDSCAPE_2025.md  CONTRIBUTING.md  Caddyfile  MASTER_PLAN.md  RAPPORT_CORRECTIONS_FRONTEND.md  README.md  build.bat  docker-compose.yml  download_wheels.bat  eslint.config.mjs  hello_nexus.py  install.py  install_build.bat  next.config.ts  package-lock.json  package.json  pyproject.toml  research_bolt.json  research_claude.json  research_claude_code.json  research_cline.json  research_codex.json  research_command_palette.json  research_comparison.json  research_cursor.json  research_cursor_ux.json  research_desktop_arch.json  research_devin.json  research_generative_ui.json  research_lovable.json  research_minimal_ui.json  research_pixiv_vrm.json  research_realtime_viz.json  (+26 more)
.github/workflows/: ci.yml
NexusAgent/: .coveragerc  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  INSTALL.ps1  PLAN.md  README.md  README_PRODUCTION.md  SECURITY.md  deploy.ps1  docker-compose.yml  fix_production_issues.py  install.bat  install.sh  nexus_test.html  pyproject.toml  requirements.txt  start_desktop.bat  test_agent_live.py  test_direct.py  test_glm_flash.py  test_massive_real_world.py  verify_windows.bat
NexusAgent/docker/: Dockerfile.browser  Dockerfile.core
NexusAgent/docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  INSTALLATION.md  PHASE_1_APP_WEB.md  PHASE_2_BACKEND.md  PHASE_3_SECURITY.md  PHASE_4_POLISH.md
NexusAgent/nexus/: __main__.py  mcp_server.py
NexusAgent/scripts/: verify_workspace.py
NexusAgent/tests/: test_all_new.py  test_knowledge_graph.py  test_user_acceptance.py
agent-ctx/: 1-viz-events-agent.md  2-voice-chatview-agent.md  task1-live-viz-artifact-agent.md  voice-pipeline-main.md
docker/: Dockerfile.browser  Dockerfile.core  Dockerfile.web  browser_service.py
docs/: GUIDE_INSTALLATION.md  RAPPORT_FRONTEND_COMPLETE.md
download/: INSTALL.md  generate_report.py  search_agent_comparison.json  search_aiavatar.json  search_aiavatarkit_detail.json  search_crystallization.json  search_free_vrm.json  search_hermes.json  search_hermes_deep.json  search_memory_evolution.json  search_native_capabilities.json  search_openclaw.json  search_openclaw_deep.json  search_openswarm.json  search_space_agent.json  search_vrm_hubs.json  search_vroid_hub.json
graphify-out/: GRAPH_REPORT.md  cost.json  manifest.json
installer/: build_installer.bat  setup.nsi
nexus/: __init__.py  __main__.py  mcp_server.py
nexus-desktop/: index.html  package-lock.json  package.json
nexus-desktop/src-tauri/: Cargo.toml  tauri.conf.json
nexus-desktop/src-tauri/capabilities/: default.json
nexus-desktop/src-tauri/src/: lib.rs  main.rs
nexus-web/: package-lock.json  package.json
prisma/: schema.prisma
scripts/: migrate_db.py  postbuild.js  verify_workspace.py
src-tauri/: tauri.conf.json
(+406 files in other folders)
