[package]
name = "nexus-desktop"
version = "0.1.0"
description = "NEXUS — Agent IA Souverain Desktop"
authors = ["NEXUS"]
edition = "2021"

[lib]
name = "nexus_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
